add_executable(abstract_class src/abstract_class.cpp)
add_executable(encapsulation_class src/encapsulation_class.cpp)
add_executable(friend_function src/friend_function.cpp)
add_executable(friend_class src/friend_class.cpp)
add_executable(inline src/inline.cpp)
add_executable(this src/this.cpp)
add_executable(method_chaining src/method_chaining.cpp)